--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.5",
