--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.514.0",
     "next": "15.2.3",
     "react": "^19.0.0",
