--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-slick": "^0.23.13",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
@@ -49,12 +50,12 @@
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.514.0",
-    "next": "15.2.3",
-    "react": "^19.0.0",
+    "next": "^15.2.3",
+    "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
