--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.514.0",
-    "next": "15.2.3",
+    "next": "^15.4.2",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
